--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""  
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "cookie-session": "^1.3.3",
     "cookie-sessions": "0.0.2",
     "express": "^4.17.1",
+    "materialize-css": "^1.0.0",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0"
-  }
+  },
+  "devDependencies": {}
 }
